# PA-GameOfLife

./: .gitignore  CMakeLists.txt  buildAndRun.sh  buildAndRun3.sh  comparer  comparer.cpp  main.cpp  main2.cpp
helpers/: golHelpers.cpp  golHelpers.h  golOpenMpHelpers.cpp  golOpenMpHelpers.h  golSerialHelpers.cpp  golSerialHelpers.h  ioHelpers.cpp  ioHelpers.h
inputs/: 01.in  02-after-150-steps.in  02-after-2-steps.in  02-increased.in  02-simple.in  02.in  02c.in  02c3.out  03.in  04.in  05.in  06.in  07.in  08.in  mpi.out
mpi_examples/: buildAndRun.sh  main.cpp  mpi_array.c
primes/: main.cpp
stl_vector_serial_omp/: buildAndRun.sh  main.cpp
stl_vector_serial_omp/helpers/: golOpenMpHelpers.cpp  golOpenMpHelpers.h  golSerialHelpers.h  ioHelpers.cpp
zsofi/: mpi_1D.cpp  mpi_2D.cpp  openmp_1D.cpp  openmp_2D.cpp
